[package]
name = "rust_pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpos = {path = "./rpos"}
gz = { version = "0.7.4", features = ["harmonic"] }
gz-msgs-common = "0.7.4"
toml = "0.8.8"
serde = {version = "1.0.193",features = ["derive"]}



[features]
gzsim = ["rpos/lock_step_enabled"]

[build-dependencies]
nom-kconfig = "0.2.0"
