[package]
name = "rust_pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpos = {path = "./rpos"}
gz = { version = "0.7.4", features = ["harmonic"] ,optional = true }
gz-msgs-common = {version = "0.7.4", optional = true}
toml = "0.8.8"
serde = {version = "1.0.193",features = ["derive"]}
quaternion-core = "0.5.0"
clap = { version = "4.4.12", features = ["derive"] }
termion = "3.0.0"
crsf = "1.0.1"
serialport = {version = "4.3.0",default-features = false}

[dev-dependencies]
bitfield = "0.14"
crc = "3.0"
rand = "0.8.4"


[features]
default = []
gzsim = ["rpos/lock_step_enabled","gz","gz-msgs-common"]

[build-dependencies]
nom-kconfig = "0.2.0"
